kernel/tests/snapshots/runtime_cli_snapshots/validate_substantiveness_result__pass.snap
---
source: tests/runtime_cli_snapshots.rs
expression: response
---
{
  "output": {
    "data": {
      "comments": "",
      "overall": "APPROVE",
      "substantiveness": {
        "decision": "PASS",
        "verdicts": [
          {
            "node": "FooLemma",
            "verdict": "Pass"
          },
          {
            "comment": "ok",
            "node": "BarThm",
            "verdict": "Pass"
          }
        ]
      },
      "summary": "two passes"
    },
    "errors": [],
    "ok": true
  },
  "status": "validate_substantiveness_result_ok"
}
